--- a/PL/PL.csproj
+++ b/PL/PL.csproj
@@ -11,7 +11,21 @@
 	  <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
 	  <AppendRuntimeIdentifierToOutputPath>false</AppendRuntimeIdentifierToOutputPath>
 	  <UseCommonOutputDirectory>true</UseCommonOutputDirectory>
+	  <PackageIcon>logo_icon_16x16.ico</PackageIcon>
+	  <ApplicationIcon>logo_icon_256x256.ico</ApplicationIcon>
+	  
   </PropertyGroup>
+
+  <ItemGroup>
+    <Content Include="logo_icon_256x256.ico" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="..\..\..\..\Downloads\logo_icon_16x16.ico">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
+  </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\BL\BL.csproj" />
