--- a/BL/BL.csproj
+++ b/BL/BL.csproj
@@ -12,6 +12,10 @@
 		<RootNamespace />
 	</PropertyGroup>
 
+	<ItemGroup>
+	  <PackageReference Include="Microsoft.Web.WebView2" Version="1.0.2957.106" />
+	</ItemGroup>
+
   <ItemGroup>
     <ProjectReference Include="..\DalFacade\DalFacade.csproj" />
     <ProjectReference Include="..\DalList\DalList.csproj" />
