--- a/DalFacade/DalFacade.csproj
+++ b/DalFacade/DalFacade.csproj
@@ -12,4 +12,8 @@
 	  <RootNamespace />
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Web.WebView2" Version="1.0.2957.106" />
+  </ItemGroup>
+
 </Project>
