--- a/DalTest/DalTest.csproj
+++ b/DalTest/DalTest.csproj
@@ -11,6 +11,10 @@
 	  <UseCommonOutputDirectory>true</UseCommonOutputDirectory>
 	  <OutputType>Exe</OutputType>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Web.WebView2" Version="1.0.2957.106" />
+  </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\DalFacade\DalFacade.csproj" />
     <ProjectReference Include="..\DalList\DalList.csproj" />
