--- a/PL/PL.csproj
+++ b/PL/PL.csproj
@@ -17,6 +17,29 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="image\allergy.jpg" />
+    <None Remove="image\allergy.png" />
+    <None Remove="image\birth.jpg" />
+    <None Remove="image\birth.png" />
+    <None Remove="image\broken_bone.jpg" />
+    <None Remove="image\fainting.jpg" />
+    <None Remove="image\fainting.png" />
+    <None Remove="image\heartattack.jpg" />
+    <None Remove="image\heartattack.png" />
+    <None Remove="image\None.png" />
+    <None Remove="image\resuscitation.jpg" />
+    <None Remove="image\resuscitation.png" />
+    <None Remove="image\security_event.jpg" />
+    <None Remove="image\security_event.png" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="image\heartattack.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="image\resuscitation.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="logo_icon_256x256.ico" />
   </ItemGroup>
 
@@ -26,6 +49,30 @@
 
   <ItemGroup>
     <ProjectReference Include="..\BL\BL.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="image\None.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="image\security_event.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="image\fainting.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="image\allergy.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="image\birth.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
 
 </Project>
